opam-version: "2.0"
synopsis: "This is a transition package, ounit-lwt is now ounit2-lwt"
description: """
More details for the transition:
https://github.com/gildor478/ounit#transition-to-ounit2
"""
maintainer: ["Sylvain Le Gall <sylvaini+ocaml@le-gall.net>"]
authors: ["Sylvain Le Gall"]
license: "MIT"
homepage: "https://github.com/gildor478/ounit"
doc: "https://gildor478.github.io/ounit"
bug-reports: "https://github.com/gildor478/ounit/issues"
depends: [
  "ocamlfind" {build}
  "ounit2-lwt" {= version}
]
install: [
  [make "install-ounit-lwt" "version=%{version}%"]
]
dev-repo: "git+https://github.com/gildor478/ounit.git"
