opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvaini+ocaml@le-gall.net>"
authors: [ "Maas-Maarten Zeeman" "Sylvain Le Gall" ]
homepage: "http://ounit.forge.ocamlcore.org"
bug-reports: "https://forge.ocamlcore.org/tracker/?func=browse&group_id=162&atid=730"
dev-repo: "git+https://github.com/gildor478/ounit.git"
doc: ["http://ounit.forge.ocamlcore.org/api-ounit/index.html"]
depends: [
  "ocaml" {>= "3.11.0"}
  "dune" {build & >= "1.11.0"}
  "base-bytes"
  "stdlib-shims"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
synopsis:
  "Unit testing framework loosely based on HUnit. It is similar to JUnit, and other XUnit testing frameworks"
