opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvaini+ocaml@le-gall.net>"
authors: [ "Maas-Maarten Zeeman" "Sylvain Le Gall" ]
homepage: "https://github.com/gildor478/ounit"
dev-repo: "git+https://github.com/gildor478/ounit.git"
bug-reports: "https://github.com/gildor478/ounit/issues"
doc: "https://gildor478.github.io/ounit/"
depends: [
  "ocamlfind" {build}
  "ounit2" {= version}
]
install: [
  [make "install-ounit" "version=%{version}%"]
]
synopsis: "This is a transition package, ounit is now ounit2"
description:"""
More details for the transition:
https://github.com/gildor478/ounit#transition-to-ounit2
"""
