opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvaini+ocaml@le-gall.net>"
authors: [ "Sylvain Le Gall" ]
homepage: "https://github.com/gildor478/ounit"
dev-repo: "git+https://github.com/gildor478/ounit.git"
bug-reports: "https://github.com/gildor478/ounit/issues"
doc: "https://gildor478.github.io/ounit/"
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {>= "1.11.0"}
  "lwt"
  "ounit2" {= version}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
synopsis: "OUnit testing framework (Lwt)"
description:"""
This library contains helper functions for building Lwt tests using OUnit.
"""
