opam-version: "2.0"
synopsis: "OUnit testing framework"
description: """
This library contains helper functions for building Lwt tests using OUnit.
"""
maintainer: ["Sylvain Le Gall <sylvaini+ocaml@le-gall.net>"]
authors: ["Sylvain Le Gall"]
license: "MIT"
homepage: "https://github.com/gildor467/ounit"
bug-reports: "https://github.com/gildor467/ounit/issues"
depends: [
  "dune" {>= "3.0"}
  "ocaml" {>= "4.04.0"}
  "lwt"
  "seq"
  "ounit2" {= version}
  "odoc" {with-doc}
]
build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/gildor467/ounit.git"
