opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvaini+ocaml@le-gall.net>"
authors: [ "Maas-Maarten Zeeman" "Sylvain Le Gall" ]
homepage: "https://github.com/gildor478/ounit"
dev-repo: "git+https://github.com/gildor478/ounit.git"
bug-reports: "https://github.com/gildor478/ounit/issues"
doc: "https://gildor478.github.io/ounit/"
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {>= "1.11.0"}
  "base-bytes"
  "base-unix"
  "stdlib-shims"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
synopsis: "OUnit testing framework"
description: """
OUnit is a unit test framework for OCaml. It allows one to easily create
unit-tests for OCaml code. It is loosely based on [HUnit], a unit testing
framework for Haskell. It is similar to [JUnit], and other XUnit testing
frameworks.
"""
