opam-version: "2.0"
synopsis: "OUnit testing framework"
description: """
OUnit is a unit test framework for OCaml. It allows one to easily
create unit-tests for OCaml code. It is loosely based on [HUnit], a
unit testing framework for Haskell. It is similar to [JUnit], and
other XUnit testing frameworks.
"""
maintainer: ["Sylvain Le Gall <sylvaini+ocaml@le-gall.net>"]
authors: ["Maas-Maarten Zeeman" "Sylvain Le Gall"]
license: "MIT"
homepage: "https://github.com/gildor467/ounit"
bug-reports: "https://github.com/gildor467/ounit/issues"
depends: [
  "dune" {>= "3.0"}
  "ocaml" {>= "4.04.0"}
  "base-unix"
  "seq"
  "stdlib-shims"
  "odoc" {with-doc}
]
build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/gildor467/ounit.git"
