(test
  (name test)
  (libraries ounit ounit.advanced str testcommon)
  (deps
    test.exe
    fakeHTML/fakeHTML.exe
    fakeRunner/fakeRunner.exe
    fakeShared/fakeShared.exe
    fakeBadFinaliser/fakeBadFinaliser.exe
    JUnit.xsd)
  (action
    (run %{test}
      -fakeHTML ./fakeHTML/fakeHTML.exe
      -fakeRunner ./fakeRunner/fakeRunner.exe
      -fakeShared ./fakeShared/fakeShared.exe
      -fakeBadFinaliser ./fakeBadFinaliser/fakeBadFinaliser.exe)))
